--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,6 +33,17 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
+        # 🔥 添加这个 Token 替换步骤
+      - name: Inject GitHub Token
+        run: |
+          echo "=== 开始 Token 替换 ==="
+          echo "检查文件是否存在..."
+          ls -la js/github-data-manager-secure.js
+          echo "执行 Token 替换..."
+          sed "s/GH_DATA_TOKEN_PLACEHOLDER/${{ secrets.GH_DATA_TOKEN }}/g" js/github-data-manager-secure.js > js/github-data-manager.js
+          echo "=== 验证生成结果 ==="
+          ls -la js/github-data-manager.js
+          echo "✅ Token 替换完成"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
